@@ -13,10 +13,8 @@ oceSetData(object, name, value, unit, originalName, note = "")
 
 \item{value}{Value for the item.}
 
-\item{unit}{An optional list specifying units for the item, containing an element
-named \code{unit} that is an \code{\link{expression}}, and a string named
-\code{scale} that describes the scale used. For example, modern temperatures
-have \code{unit=list(unit=expression(degree*C), scale="ITS-90")}.}
+\item{unit}{An optional indication of the units for the item. This has 
+three possible forms (see \dQuote{Details}).}
 
 \item{originalName}{Optional character string giving an 'original' name (e.g.
 as stored in the header of a data file).}
@@ -27,5 +25,32 @@ as stored in the header of a data file).}
 }
 \description{
 Set something in the \code{data} slot of an \code{oce} object
+}
+\details{
+There are three possibilities for \code{unit}:
+\itemize{
+\item \emph{Case 1.} \code{unit} is a \code{\link{list}} containing two items.
+This may be a named or unnamed list. If named, then the names must be
+\code{unit} and \code{scale}; if unnamed, then those names are assigned
+to the items, in order. Either way, the \code{unit}
+item must be an \code{\link{expression}} that specifies the unit,
+and the \code{scale} item must be a string that describes the scale. For
+example, modern temperatures have
+\code{unit=list(unit=expression(degree*C), scale="ITS-90")}.
+\item \emph{Case 2.} \code{unit} is an \code{\link{expression}} giving the unit as above. In this
+case, the scale will be set to \code{""}.
+\item \emph{Case 3.} \code{unit} is a character string that indicates the unit.
+This is converted to an expression with 
+\code{\link{as.expression}}, and the scale set to \code{""}.
+}
+}
+\examples{
+data(ctd)
+Tf <- swTFreeze(ctd)
+ctd <- oceSetData(ctd, "freezing", Tf, list(unit=expression(degree*C), scale="ITS-90"))
+feet <- swDepth(ctd) / 0.3048
+ctd <- oceSetData(ctd, name="depthInFeet", value=feet, expression("feet"))
+fathoms <- feet / 6
+ctd <- oceSetData(ctd, "depthInFathoms", fathoms, "fathoms")
 }
 
